--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
     font-family: 'Inter', sans-serif;
 }
 
+main {
+    margin-top: 120px;
+}
+
 /* section 1 */
 header {
     margin-top: 50px;
@@ -40,26 +44,24 @@ header .content-1 h3 {
 
 /* section 2 */
 .content-2 {
-    margin-top: 120px;
     text-align: center;
 }
 
-.offer-detail .offer {
+.offer {
     color: #ED0066;
     text-align: center;
     font-size: 88px;
     font-weight: 700;
-
 }
 
-.offer-detail .subtext {
+.subtext {
     color: #ED0066;
     text-align: center;
     font-size: 24px;
     font-weight: 500;
 }
 
-.offer-detail .category {
+.category {
     color: #070211;
     text-align: center;
     font-size: 48px;
@@ -67,7 +69,10 @@ header .content-1 h3 {
     margin-bottom: 48px;
 }
 
-.offer-detail .newyearimg {
+.newyearimg {
     width: 802.9px;
     height: 500px;
 }
+
+
+/* section 3 */
