--- a/style.css
+++ b/style.css
@@ -216,6 +216,62 @@ header .content-1 h3 {
 
 
 /* section 6 */
+.content-6 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.insider-6 {
+    margin-top: 120px;
+    text-align: center;
+}
+
+.short-text {
+    color: #070211;
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.big-text {
+    color: #070211;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+}
+
+.holiday {
+    color: #ED0066;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-weight: 900;
+}
+
+.big-descript {
+    margin-top: -28px;
+    width: 1068px;
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 64px;    
+}
+
+
+#discount {
+    position: relative;
+    top: 100px;
+    left: 120px;
+    width: 220.048px;
+    height: 220.048px;
+}
+
+.disc-rect {
+    position: relative;
+    width: 1320px;
+    display: flex;
+    justify-content: right;
+}
+
 
 
 
@@ -244,8 +300,13 @@ header .content-1 h3 {
 .grid {
     display: flex;
     flex-wrap: wrap;
-    max-width: 1320px;
+    max-width: 1330px;
     gap: 24px;
+}
+
+.img-item:hover {
+    border: 4px solid #ED0066;
+    border-radius: 22px;
 }
 
 
